<resources>
    <string name="intro_slogan">End-to-end encrypted cloud clipboard</string>
    <string name="intro_welcome">Welcome to Zync! Swipe left to continue!</string>
    <string name="intro_description">Zync securely synchronizes the copy/paste function across all your devices,
        like phones, laptops, and tablets! Simply install, login, you\'re ready to go! Click the button below
        to get started!
    </string>
    <string name="zync_text">Text</string>
    <string name="zync_image">Image</string>
    <string name="zync_video">Video</string>
    <string name="zync_binary">Binary</string>
    <string name="app_name">Zync</string>
    <string name="zync_team">Zync Team</string>
    <string name="telegram_logo">Telegram Logo</string>
    <string name="github_logo">GitHub Logo</string>
    <string name="keybase_logo">Keybase Logo</string>
    <string name="twitter_logo">Twitter Logo</string>
    <string name="linkedin_logo">LinkedIn Logo</string>
    <string name="mazen_name">Mazen Kotb</string>
    <string name="mazen_title">Java Software Engineer (Android Developer)</string>
    <string name="mazen_bio">I\'m currently a Canadian Software Engineer and have been programming for 6 years since I
        was young.
        Although I\'ve stuck in my hand in around everything, my expertise primarily resides in using JVM languages for
        backend infrastructures.
        Outside of Computer Science, I love writing, talking (in front of large groups), and exploring around Vancouver.
        If you want to chat, feel free to hit me up a message on Telegram.
    </string>
    <string name="amir_name">Amir Omidi</string>
    <string name="amir_title">Project Lead and Developer</string>
    <string name="amir_bio">I\'m a student studying Computer Sciences at Drexel University. I love trying out new
        technologies, frameworks, and gadgets.
        My career goal is to be a software engineer at a top tech firm.
    </string>
    <string name="brandon_name">Brandon</string>
    <string name="brandon_title">Developer \n(Chrome Extension)</string>
    <string name="brandon_bio">I am a self-taught, self-employed software developer living in the United Kingdom,
        primarily working with command line /
        backend applications. I know Java, C#, Python and a handful of other non-programming languages.
    </string>
    <string name="vilsol_name">Vilsol</string>
    <string name="vilsol_title">Caffeine to Uptime Converter\n(Zync Server)</string>
    <string name="vilsol_bio">A software engineer with a passion for virtualization. Mostly spent time as a full-stack
        developer in many languages, frameworks
        and platforms, but recently more focused on systems, operations and infrastructure. Left university to pursue my
        career as well as many side projects
        including this one.
    </string>
    <string name="mattrick_name">Matthew McCune</string>
    <string name="mattrick_title">Web Developer\nGraphic Designer</string>
    <string name="mattrick_bio">I\'m a designer and developer from sunny Southern California. I mostly work with web
        stuff.
    </string>
    <string name="mark_name">Mark Hendricks</string>
    <string name="mark_title">Backend Developer</string>
    <string name="mark_bio">I\'m a Computer Science student at University of Technology in Eindhoven, mainly spending my
        time experimenting with new solutions and
        new languages, always aiming for fast and scale-able.
    </string>
    <string name="zync_settings">Zync Settings</string>
    <string name="encryption">Encryption</string>
    <string name="encryption_pass">Encryption Password</string>
    <string name="encryption_pass_sum">Create/Enter the key used to keep your clipboard safe</string>
    <string name="encryption_pass_settings_sum">The key used to keep your clipboard data safe</string>
    <string name="pref_header_general">General Settings</string>
    <string name="enter_pass">Please enter the password you wish to use for encryption</string>
    <string name="sync_settings">Sync</string>
    <string name="sync_up">Sync up</string>
    <string name="sync_up_sum">Synchronize local clipboard with other devices</string>
    <string name="sync_down">Sync down</string>
    <string name="sync_down_sum">Synchronize cloud clipboard on this device</string>
    <string name="signing_in">Logging into Zync&#8230;</string>
    <string name="log_in">Login</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="start">Start</string>
    <string name="title_activity_intro">@string/app_name</string>
    <string name="example_question">Example question?</string>
    <string name="example_answer">
        This is done through super technology that utilizes quantum physics to
        reach an exchange of three proxy superpositions, generating equilibrium
        between the device spaces
    </string>
    <string name="separator">Separator</string>
    <string name="zync_caption">End-to-end encrypted cloud clipboard synchronization</string>
    <string name="password_insufficient">Your password must be greater than 10 characters!</string>
    <string name="encryption_password_title">Encryption Password</string>
    <string name="camera">Camera</string>
    <string name="ok">OK</string>
    <string name="logout">Log out</string>
    <string name="logout_success">Successfully logged out</string>
    <string name="disable_encryption">Disable Encryption</string>
    <string name="uploading_image">Uploading image&#8230;</string>
    <string name="please_wait">Please wait</string>
    <string name="zync_persistentnotif_title">@string/app_name</string>
    <string name="zync_persistentnotif_descr">Zync is listening to the clipboard&#8230;</string>
    <string name="notifications">Notifications</string>
    <string name="persistent_notification">Persistent Notification</string>
    <string name="persistent_notification_desc">This allows the application to accurately listen for clipboard changes
    </string>
    <string name="clipboard_change_notification">Clipboard Change</string>
    <string name="clipboard_change_notification_desc">Be notified of changes to the cloud clipboard</string>
    <string name="clipboard_posted_notification">Clipboard posted!</string>
    <string name="clipboard_posted_notification_desc">Your clipboard was just posted!</string>
    <string name="clipboard_post_error_notification">Error posting your clipboard</string>
    <string name="clipboard_post_error_notification_desc">Are you connected to the internet?</string>
    <string name="clipboard_changed_notification">Clipboard updated!</string>
    <string name="clipboard_changed_notification_desc">New content has been written to your clipboard!</string>
    <string name="connectivity">Connectivity</string>
    <string name="use_on_data">Use on Data</string>
    <string name="use_on_data_desc">Use mobile data to post/fetch clipboard on the cloud</string>
    <string name="no_internet">Cannot connect to the internet!</string>
    <string name="no_internet_desc">Please join a WiFi network to continue</string>
    <string name="history">History</string>
    <string name="loading_history">Loading history&#8230;</string>
    <string name="unable_fetch_history">Unable to fetch history!</string>
    <string name="unable_fetch_history_msg">Due to Error #%1$d: %2$s</string>
    <string name="history_entry_info">%1$s</string>
    <string name="history_entry_title">%1$s Clip</string>
    <string name="click_to_copy">Click here to copy!</string>
    <string name="history_image_desc">Image. Click to share to another app!</string>
    <string name="history_encryption_error">Error decrypting this entry&#8230;</string>
    <string name="history_copy_button">Copy to Clipboard</string>
    <string name="history_clip_updated_msg">Your clipboard has been successfully updated</string>
    <string name="max_size">Max Size</string>
    <string name="max_size_desc">The max size of a clip that will be synced.\n0 MB = no limit</string>
    <string name="max_size_number">%1$s MB</string>
    <string name="general_settings">General</string>
    <string name="feedback_settings">Feedback</string>
    <string name="github_repository">Find us on GitHub!</string>
    <string name="credits">Credits</string>
    <string name="error">Error</string>
    <string name="no_emailc_or_web">No email app or browser was found to direct you to a place where you can send
        feedback!
    </string>
    <string name="no_webc">No browser app!</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="debug">Debug</string>
    <string name="debug_copied">Debug info copied to clipboard!</string>
    <string name="title_activity_test_history">TestHistoryActivity</string>
</resources>