<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the app code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the app code. -->

    <PreferenceCategory
            android:title="@string/encryption">
        <Preference
                android:title="@string/encryption_pass" android:key="encryption_pass" android:defaultValue="password"
                android:summary="@string/encryption_pass_settings_sum"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/sync_settings">

        <SwitchPreference
                android:defaultValue="true"
                android:title="@string/persistent_notification" android:key="enable_persistent_notification"
                android:summary="@string/persistent_notification_desc"/>
        <SwitchPreference
                android:defaultValue="true"
                android:title="@string/sync_up" android:key="sync_up" android:summary="@string/sync_up_sum"/>
        <SwitchPreference
                android:defaultValue="true"
                android:title="@string/sync_down" android:key="sync_down" android:summary="@string/sync_down_sum"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/notifications">

        <SwitchPreference
                android:defaultValue="true"
                android:title="@string/clipboard_change_notification" android:key="clipboard_change_notification"
                android:summary="@string/clipboard_change_notification_desc"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/connectivity">
        <SwitchPreference
                android:defaultValue="true"
                android:title="@string/use_on_data" android:key="use_on_data"
                android:summary="@string/use_on_data_desc"/>

        <co.zync.zync.utils.ZyncSliderPreference
                android:title="@string/max_size" android:key="max_size"
                android:summary="@string/max_size_desc"
                android:dialogMessage="@string/max_size_desc"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/general_settings">
        <Preference android:title="@string/feedback_settings"
                    android:key="feedback"
                    android:icon="@drawable/ic_feedback"/>
        <Preference android:title="@string/github_repository"
                    android:key="github"
                    android:icon="@drawable/ic_github_logo" />
        <Preference android:title="@string/credits"
                    android:key="credits"
                    android:icon="@drawable/ic_credits" />
    </PreferenceCategory>
</PreferenceScreen>
