<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:icon="@android:drawable/ic_menu_camera"
                android:title="@string/camera" android:id="@+id/camera"/>
        <item android:icon="@android:drawable/ic_menu_recent_history"
              android:title="@string/history"
              android:id="@+id/history" />
    </group>
    <group>
        <item android:icon="@android:drawable/ic_menu_help" android:title="@string/help" android:id="@+id/nav_help"/>
        <item android:icon="@android:drawable/ic_menu_preferences" android:title="@string/settings" android:id="@+id/nav_settings"/>
    </group>
    <group>
        <item android:icon="@drawable/ic_exit_to_app_black" android:title="@string/logout" android:id="@+id/logout"/>
    </group>

</menu>
